tests/files/type_checker_tests/should_fail/074.cmdr
//Should fail using uninitialized variable
println x;
